// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Carousel 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel __AMIS_COMPONENT_CLASS_PREFIX__Carousel--light show"
    style="width: 500px; height: 300px;"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-container"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-item fade out"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Image __AMIS_COMPONENT_CLASS_PREFIX__Image--original __AMIS_COMPONENT_CLASS_PREFIX__Carousel-image"
        >
          <div
            class="
            __AMIS_COMPONENT_CLASS_PREFIX__Image-origin __AMIS_COMPONENT_CLASS_PREFIX__Image-origin--contain undefined Img-container"
          >
            <div
              class="mask"
            >
              <span>
                标题
              </span>
            </div>
            <img
              class="__AMIS_COMPONENT_CLASS_PREFIX__Image-image"
              src="https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png"
            />
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Image-info"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Image-title"
              title="标题"
            >
              标题
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Image-caption"
              title="描述"
            >
              描述
            </div>
          </div>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-item fade in"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__Html"
        >
          <div
            style="width: 100%; height: 300px; background: #e3e3e3; text-align: center; line-height: 300px;"
          >
            carousel data
          </div>
        </span>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dotsControl"
    >
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dot"
      />
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dot is-active"
      />
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dot"
      />
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-leftArrow"
    >
      <icon-mock
        class="icon icon-left-arrow"
        icon="left-arrow"
      />
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-rightArrow"
    >
      <icon-mock
        class="icon icon-right-arrow"
        icon="right-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Carousel with controls & controlsTheme & thumbMode 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel __AMIS_COMPONENT_CLASS_PREFIX__Carousel--dark"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-container"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-item fade in"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Image __AMIS_COMPONENT_CLASS_PREFIX__Image--original __AMIS_COMPONENT_CLASS_PREFIX__Carousel-image"
        >
          <div
            class="
            __AMIS_COMPONENT_CLASS_PREFIX__Image-origin __AMIS_COMPONENT_CLASS_PREFIX__Image-origin--cover undefined Img-container"
          >
            <div
              class="mask"
            >
              <span />
            </div>
            <img
              class="__AMIS_COMPONENT_CLASS_PREFIX__Image-image"
              src="https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Carousel with itemSchema & width & height 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel __AMIS_COMPONENT_CLASS_PREFIX__Carousel--light"
    style="width: 101px; height: 99px;"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-container"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-item fade in"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            <div
              class="itemSchemaClassName"
              style="background-image: url('https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png');"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dotsControl"
    >
      <span
        class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-dot is-active"
      />
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-leftArrow"
    >
      <icon-mock
        class="icon icon-left-arrow"
        icon="left-arrow"
      />
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Carousel-rightArrow"
    >
      <icon-mock
        class="icon icon-right-arrow"
        icon="right-arrow"
      />
    </div>
  </div>
</div>
`;
